Changed position to fixed as z-index not reflected on Safari

--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -7,7 +7,7 @@
 & when (@media-common = true) {
     axo-auth,
     paypal-shipping-address-selector {
-        position: relative;
+        position: fixed;
         z-index: @paypal-fastlane-z-index;
     }
 
